Adjustments to embedded getting started guide (#38)
* Update instructions to recommend copying ports/template folder 
* Add a few more test commands that are good to run as a validation check
* Simplify coredump dependency setup steps and & provide links to flash coredump ports
* Rejig reboot tracking template to match what we have done when a port exists (i.e call `memfault_platform_reboot_tracking_boot()`)

--- a/docs/embedded/steps/add-sources.mdx
+++ b/docs/embedded/steps/add-sources.mdx
@@ -78,4 +78,12 @@ accordingly
    project
 5. add `third_party/memfault/` to the include paths for your project
 
+:::info
+
+When using Eclipse as your build system, folders can be opted out from a build
+by right clicking on the folder and selecting "Resource Configuration" ->
+"Exclude from Build".
+
+:::
+
 </details>
