--- a/docs/embedded/steps/clone-sdk.mdx
+++ b/docs/embedded/steps/clone-sdk.mdx
@@ -9,16 +9,11 @@ cd ${YOUR_PROJECT_DIR}
 mkdir -p third_party/memfault
 
 cd third_party/memfault
-touch memfault_platform_port.c
-touch memfault_platform_coredump_regions.c
-touch memfault_platform_config.h
-touch memfault_trace_reason_user_config.def
-touch memfault_metrics_heartbeat_config.def
-touch memfault_platform_log_config.h
-touch memfault_platform_config.h
 
 # Add memfault repo as submodule, subtree, or copy in as source directly
 git submodule add https://github.com/memfault/memfault-firmware-sdk.git memfault-firmware-sdk
+
+cp memfault-firmware-sdk/ports/template/* .
 ```
 
 When you are done, you should have the following directory structure in your
@@ -28,9 +23,8 @@ project:
 memfault/
 //...
 ├── memfault-firmware-sdk (submodule)
-| # Files where port to your platform will be implemented
+| # Files where port / glue layer to your platform will be implemented
 ├── memfault_platform_port.c
-├── memfault_platform_coredump_regions.c
 |
 | # Configuration Headers
 ├── memfault_metrics_heartbeat_config.def
