--- a/docs/embedded/steps/add-cli-test-commands.mdx
+++ b/docs/embedded/steps/add-cli-test-commands.mdx
@@ -10,13 +10,19 @@ button press or called from `main()` on bootup from a test image
 ```c
 #include "memfault/components.h"
 
-int test_reboot(int argc, char *argv[]) {
-  memfault_reboot_tracking_mark_reset_imminent(kMfltRebootReason_UserReset, NULL);
-  memfault_platform_reboot();
+//
+// Test Platform Ports
+//
+
+int test_logging(int argc, char *argv[]) {
+  MEMFAULT_LOG_DEBUG("Debug log!");
+  MEMFAULT_LOG_INFO("Info log!");
+  MEMFAULT_LOG_WARN("Warning log!");
+  MEMFAULT_LOG_ERROR("Error log!");
+  return 0;
 }
 
-// This writes test patterns over the platform coredump region
-// And prints info if it fails.
+// Runs a sanity test to confirm coredump port is working as expected
 int test_coredump_storage(int argc, char *argv[]) {
 
   // Note: Coredump saving runs from an ISR prior to reboot so should
@@ -29,19 +35,51 @@ int test_coredump_storage(int argc, char *argv[]) {
   return 0;
 }
 
+//
+// Test core SDK functionality
+//
+
+// Triggers an immediate heartbeat capture (instead of waiting for timer
+// to expire)
+int test_heartbeat(int argc, char *argv[]) {
+  memfault_metrics_heartbeat_debug_trigger();
+  return 0;
+}
+
 int test_trace(int argc, char *argv[]) {
   MEMFAULT_TRACE_EVENT_WITH_LOG(critical_error, "A test error trace!");
   return 0;
 }
+
+//! Trigger a user initiated reboot and confirm reason is persisted
+int test_reboot(int argc, char *argv[]) {
+  memfault_reboot_tracking_mark_reset_imminent(kMfltRebootReason_UserReset, NULL);
+  memfault_platform_reboot();
+}
+
+//
+// Test different crash types where a coredump should be captured
+//
 
 int test_assert(int argc, char *argv[]) {
   MEMFAULT_ASSERT(0);
   return -1; // should never get here
 }
 
-void test_fault(void) {
+int test_fault(void) {
   void (*bad_func)(void) = (void *)0xEEEEDEAD;
   bad_func();
   return -1; // should never get here
+}
+
+int test_hang(int argc, char *argv[]) {
+  while (1) {}
+  return -1; // should never get here
+}
+
+// Dump Memfault data collected to console
+int test_export(int argc, char *argv[]) {
+  memfault_data_export_dump_chunks();
+  return 0;
 }
 ```
