Improve documentation around exporting memfault chunks via CLI (#39)
* Move bulk of gdb and cli based upload guides into MDX files so the steps can be dropped directly into the Cortex-M getting started guide
* Hide "memfault_data_export_dump_chunks()" override option behind toggle since 99% of folks should not need it

--- a/docs/embedded/arm-cortex-m-guide.mdx
+++ b/docs/embedded/arm-cortex-m-guide.mdx
@@ -107,7 +107,7 @@ instrumentation, and test the integration!
 
 <AddCliTestCommands />
 
-### Post data Locally
+### Post Data to Cloud via Local Debug Setup
 
 <PostChunksLocally />
 
@@ -124,6 +124,6 @@ instrumentation, and test the integration!
 With data collection verified locally, the final step is to push data
 automatically to the Memfault cloud for analysis.
 
-### Push Data to Cloud over Device Transport
+### Post Data to Cloud via Device Transport
 
 <PublishDataToCloud />
