Remove reference to memfault_platform_coredump_regions.c
This file no longer exists in the template folder

--- a/docs/embedded/steps/add-sources.mdx
+++ b/docs/embedded/steps/add-sources.mdx
@@ -13,8 +13,7 @@ include $(MEMFAULT_SDK_ROOT)/makefiles/MemfaultWorker.mk
 
 <YOUR_SRC_FILES> += \
   $(MEMFAULT_COMPONENTS_SRCS) \
-  $(MEMFAULT_PORT_ROOT)/memfault_platform_port.c \
-  $(MEMFAULT_PORT_ROOT)/memfault_platform_coredump_regions.c
+  $(MEMFAULT_PORT_ROOT)/memfault_platform_port.c
 
 <YOUR_INCLUDE_PATHS> += \
   $(MEMFAULT_COMPONENTS_INC_FOLDERS) \
