Refresh Subsystem Integration Guides (#42)
With main [getting started guides](https://docs.memfault.com/docs/embedded/arm-cortex-m-guide) now available, the subsystem integration guides are confusing as they repeat steps that would have been implemented as part of the initial port.

I'd like to move the subsystems guides to be an overview of how each subsystem works and how to make the most of it. This PR makes a first pass attempt at that by:

* Subsystem guides now redirect to the basic integration as a pre-requisite
* I've reworked reboot, metrics, trace event guides to focus on how to make use of the module instead of how to integrate it since the integration work is now taken care of in the initial port

--- a/docs/embedded/arm-cortex-m-guide.mdx
+++ b/docs/embedded/arm-cortex-m-guide.mdx
@@ -86,8 +86,20 @@ or TI ARM Compiler.
 At this point your project should compile and be able to boot. On startup you
 should see some messaging like:
 
+At this point your project should compile and be able to boot. On startup you
+should see some messaging like the following print when
+`memfault_platform_boot()` is called:
+
 ```
-[I] MFLT: Memfault Build ID: d8d6a047282f025fffa29fa767100f310bc40f80
+[I] Memfault Build ID: cefaeb9407ab0dac7a5efe9fd510618ee21e9df7
+[I] S/N: MFLT0123
+[I] SW type: app-fw
+[I] SW version: 1.0.0+cefaeb940
+[I] HW version: dvt1
+[I] Reset Reason, RESETREAS=0x4
+[I] Reset Causes:
+[I]  Software
+[I] Memfault Initialized!
 ```
 
 ## Verification & Tuning Steps
