--- a/docs/embedded/introduction.mdx
+++ b/docs/embedded/introduction.mdx
@@ -4,6 +4,8 @@ title: Introduction
 sidebar_label: Introduction
 ---
 
+import IntegrationGuideTable from "./integration-guide-table.mdx";
+
 Memfault is a full device monitoring solution which can be integrated into any
 embedded device utilizing ARM Cortex-M or ESP32 MCUs irrespective of the RTOS in
 use or connectivity path in place.
@@ -42,16 +44,7 @@ yet have one, you can
 
 :::
 
-<center>
-
-| MCU Architecture |                           Getting Started Guide                           |
-| ---------------- | :-----------------------------------------------------------------------: |
-| ARM Cortex-M     |    [ARM Cortex-M Integration Guide](/docs/embedded/arm-cortex-m-guide)    |
-| nRF Connect SDK  | [nRF Connect SDK Integration Guide](/docs/embedded/nrf-connect-sdk-guide) |
-| ESP32 ESP-IDF    |       [ESP32 ESP-IDF Integration Guide](/docs/embedded/esp32-guide)       |
-| ESP8266          |  [ESP8266 RTOS Integration Guide](/docs/embedded/esp8266-rtos-sdk-guide)  |
-
-</center>
+<IntegrationGuideTable />
 
 ### Modules
 
