--- a/docs/embedded/releases-guide.mdx
+++ b/docs/embedded/releases-guide.mdx
@@ -304,8 +304,8 @@ under "Options" and select the "Abort Rollout" option.
 
 ## Firmware Integration Checklist
 
-When querying the Memfault Latest Endpoint directly from firmware, there's a few
-common configuration items you will want to confirm are setup correctly.:
+When querying the Memfault Latest Endpoint directly from firmware, there are a
+few common items you will want to confirm are setup correctly.:
 
 ### Include Root Certs to Communicate with Memfault cloud
 
