--- a/docs/embedded/self-serve.mdx
+++ b/docs/embedded/self-serve.mdx
@@ -4,58 +4,6 @@ title: Embedded Integration Guide
 sidebar_label: Embedded Integration Guide
 ---
 
-import TryFlow from "./steps/try-flow.mdx";
-import CloneSdk from "./steps/clone-sdk.mdx";
-import AddSources from "./steps/add-sources.mdx";
-import CorePlatformDependencies from "./steps/core-platform-dependencies.mdx";
-import AddBuildId from "./steps/add-build-id.mdx";
-import LoggingDependency from "./steps/logging-dependency.mdx";
-import RtosPorts from "./steps/rtos-ports.mdx";
-import CoredumpDependency from "./steps/coredump-dependency.mdx";
-import RegisterAssert from "./steps/register-assert.mdx";
-import PostChunksLocally from "./steps/post-chunks-locally.mdx";
+import CortexMGuide from "./arm-cortex-m-guide.mdx";
 
-### [Optional] Collect a coredump capture using GDB
-
-<TryFlow />
-
-### Prepare folder for memfault-firmware-sdk & port
-
-<CloneSdk />
-
-### Add Sources to Build System
-
-<AddSources />
-
-### Implement Core Platform Specific Dependencies
-
-<CorePlatformDependencies />
-
-### Add a Unique Identifier to target
-
-<AddBuildId />
-
-### Implement Logging Dependency
-
-<LoggingDependency />
-
-### Add RTOS Port Files
-
-<RtosPorts />
-
-### Register Assert Handler
-
-<RegisterAssert />
-
-### Implement Coredump Storage Dependency
-
-<CoredumpDependency />
-
-### Confirm Integration Links
-
-At this point your project should compile and be able to boot. On startup you
-should see some messaging like:
-
-```
-[I] MFLT: Memfault Build ID: d8d6a047282f025fffa29fa767100f310bc40f80
-```
+<CortexMGuide />
