Refresh links on main page (#51)

--- a/docs/embedded/introduction.mdx
+++ b/docs/embedded/introduction.mdx
@@ -40,7 +40,7 @@ an error, and publish data to the Memfault cloud:
 
 The following guides assume you already have a Memfault Account. If you don't
 yet have one, you can
-[create one here](https://memfault.typeform.com/to/zHsZBg?plan=starter).
+[create one here](https://memfault.com/register?utm_campaign=Self%20Serve%20Launch&utm_source=Docs).
 
 :::
 
