--- a/docs/embedded/nrf-connect-sdk-guide.mdx
+++ b/docs/embedded/nrf-connect-sdk-guide.mdx
@@ -135,7 +135,7 @@ being built or a file of it's own.
 void memfault_platform_get_device_info(sMemfaultDeviceInfo *info) {
   // platform specific version information
   *info = (sMemfaultDeviceInfo) {
-    .device_serial = "DEMOSERIAL,
+    .device_serial = "DEMOSERIAL",
     .software_type = "main-mcu-fw",
     .software_version = "1.0.0",
     .hardware_version = "pvt",
