Link to the OTA example in AOSP OTA docs (#53)

--- a/docs/android/android-releases-guide.mdx
+++ b/docs/android/android-releases-guide.mdx
@@ -87,6 +87,12 @@ documentation.
 
 ## Getting Started
 
+### Example OTA App
+
+A basic example OTA agent application can be found on
+[Memfault's Github](https://github.com/memfault/aosp-ota-example). Be sure to
+check the `README` and note the limitations of this example code.
+
 ### Memfault CLI Tool
 
 Releases can be managed either from the Memfault web UI or via the
